Fixed Distances on smaller devices.

--- a/css/default.css
+++ b/css/default.css
@@ -15,8 +15,8 @@
 }
 
 .nav {
-  position: absolute;
-  top: 125px;
+  position: relative;
+  top: 25px;
   right: 0px;
   left: auto;
   width: 100%;
@@ -32,8 +32,8 @@
 .footer {
   border-top: 3px solid lightgrey;
   margin-top: 50px;
-  margin-left: 750px;
-  margin-right: 750px;
+  margin-left: 35%;
+  margin-right: 35%;
   text-align: center;
   background: linear-gradient(to right, darkorange , violet);
   -webkit-background-clip: text;
@@ -43,9 +43,9 @@
 
 .slideshow {
   position: relative;
-  margin-top: 71px;
-  margin-left: 52px;
-  margin-right: 52px;
+  margin-top: 25px;
+  margin-left: 60px;
+  margin-right: 60px;
 }
 
 .mySlides {
@@ -173,7 +173,7 @@ li.dropdown {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 15.6%;
+  min-width: 15.35%;
   z-index: 1;
 }
 
